--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#7c5bb9" />
-  <meta name="description" content="Elective Course Enrollment System Created by TJ.THANAPAT" />
-  <title>ระบบลงทะเบียนรายวิชาเพิ่มเติมโรงเรียนสตรีสมุทรปราการ</title>
+  <meta name="description" content="SSP Course Enrollment System | Course Enrollment System Created by TJ.THANAPAT" />
+  <title>ระบบลงทะเบียนเรียนโรงเรียนสตรีสมุทรปราการ</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
